Fix background image overlapping

--- a/styles/home.css
+++ b/styles/home.css
@@ -2,7 +2,7 @@
     height: calc(100vh - 80px);
     padding-top: 12px;
     padding-bottom: 12px;
-    background-color: blue;
+    background-color: white;
 
     * {
         box-sizing: border-box;
