--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,10 @@
-html,body {
+body, html {
     height:100%;
     padding:0;
     margin:0;
+}
+
+body {
     background-image: url(../resources/img/stock-photo-watercolor-floral-seamless-pattern-in-vintage-rustic-style-colored-garden-illustration-on-ivory-2139439847.jpg);
     background-repeat: repeat; /* or repeat-x or repeat-y */
     background-size: cover;
